--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h3>My first website</h3>
+        <h3>My<span class="head-title" >first</span>website</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum porro unde recusandae labore architecto maiores laudantium cum minus praesentium adipisci! Quia ad cum facere dolor, laudantium hic! Voluptates, error veniam!</p>
     </div>
     <div>
